error fix - start recording

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,8 @@
         if (j.ok) {
           stopBtn.disabled = false
         } else {
-          alert('Failed to start recording')
+          const msg = j.message || j.error || 'Failed to start recording'
+          alert(msg)
           startBtn.disabled = false
         }
       })
